--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,13 @@ spring.datasource.removeAbandoned=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/customer_onborading
 #spring.datasource.username=customer_onborading
 #spring.datasource.password=Yohannes@hira123321
-#spring.jpa.hibernate.ddl-auto=update
+
 #
 #
-##spring.http.multipart.max-file-size=110000MB
-##spring.http.multipart.max-request-size=110001MB
+spring.http.multipart.max-file-size=110000MB
+spring.http.multipart.max-request-size=110001MB
 #
-#spring.servlet.multipart.max-file-size=128000MB
-#spring.servlet.multipart.max-request-size=1280000MB
+spring.servlet.multipart.max-file-size=128000MB
+spring.servlet.multipart.max-request-size=1280000MB
 
 
