--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-
+#
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
@@ -8,9 +8,19 @@ spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
 
-
 #server.port=9998
-##Mysql Local configurations
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=50
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=false
+#spring.datasource.url=jdbc:postgresql://localhost:5432/customer_onboarding
+#spring.datasource.username=customer_onborading
+#spring.datasource.password=Yohannes@hira123321
+#
+
+
+
+#Mysql Local configurations
 #spring.datasource.url= jdbc:mysql://localhost:3306/customer_onborading
 #spring.datasource.username=customer_onborading
 #spring.datasource.password=Yohannes@hira123321
