--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
@@ -7,7 +7,7 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
-
+#
 #server.port=9998
 #spring.datasource.hikari.connectionTimeout=20000
 #spring.datasource.hikari.maximumPoolSize=50
@@ -16,7 +16,7 @@ spring.datasource.removeAbandoned=true
 #spring.datasource.url=jdbc:postgresql://localhost:5432/customer_onboarding
 #spring.datasource.username=customer_onborading
 #spring.datasource.password=Yohannes@hira123321
-
+#
 
 
 
