--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
