--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.maxActive=10
+#spring.datasource.maxIdle=5
+#spring.datasource.minIdle=2
+#spring.datasource.initialSize=5
+#spring.datasource.removeAbandoned=true
 
 #
-#server.port=9998
+server.port=9998
 #spring.datasource.hikari.connectionTimeout=20000
 #spring.datasource.hikari.maximumPoolSize=50
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -21,9 +21,10 @@ spring.datasource.removeAbandoned=true
 
 
 #Mysql Local configurations
-#spring.datasource.url= jdbc:mysql://localhost:3306/customer_onborading
-#spring.datasource.username=customer_onborading
-#spring.datasource.password=Yohannes@hira123321
+spring.jpa.database=mysql
+spring.datasource.url= jdbc:mysql://localhost:3306/customer_onboarding
+spring.datasource.username=customer_onboarding
+spring.datasource.password=Yohannes@hira123321
 
 #
 #
